# cs-course-projects

./: README.md
Attendance-Application/: CMakeLists.txt  Makefile  README.md  master.txt
Attendance-Application/src/: List.cpp  main.cpp  menu.cpp
Attendance-Application/src/headers/: List.h  ListNode.h  Stack.h  main.h  menu.h
Connect-Four/: CMakeLists.txt  README.md  a.out
Connect-Four/src/: connect4.c  main.c
Connect-Four/src/headers/: connect4.h
Fitness-Application/: CMakeLists.txt  FitnessAppWrapper.cpp  Makefile  README.md  dietPlans.txt  exercisePlans.txt  fitnessapp
Fitness-Application/src/: DietPlans.cpp  ExercisePlan.cpp  FitnessAppWrapper.cpp
Fitness-Application/src/headers/: pa5.h
Intro-Data-Analytics/: README.md
Intro-Data-Analytics/MA1/: .project  ma1_folder_commands.txt  primality_test.py
Intro-Data-Analytics/MA2/: Amortized Loan.ipynb  Amortized+Loan.html
Intro-Data-Analytics/MA3/: MA3.html  MA3.ipynb
Intro-Data-Analytics/MA4/: MA4.html  MA4.ipynb
Intro-Data-Analytics/MA5/: MA5.ipynb
Intro-Data-Analytics/MA6/: PA2.ipynb  README.md  ma6.ipynb
Intro-Data-Analytics/PA1/: sorted_tweets.txt  twitter_sort.py
Intro-Data-Analytics/PA4_1/: keyboard_test.py  pa4.py
Yet Another Space Invader/: CMakeLists.txt  README.md  main
Yet Another Space Invader/src/: PlayState.cpp
Yet Another Space Invader/src/headers/: Definintions.h  PlayState.h
